// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupTitle renders with no subtitle when \`type = default\` 1`] = `
<span>
  <GuideAnchor
    disabled={true}
    position="bottom"
    target="issue_title"
  >
    metadata title
  </GuideAnchor>
</span>
`;

exports[`EventOrGroupTitle renders with subtitle when \`type = csp\` 1`] = `
<span>
  <GuideAnchor
    disabled={true}
    position="bottom"
    target="issue_title"
  >
    <span>
      metadata directive
    </span>
  </GuideAnchor>
  <Spacer />
  <em
    title="metadata uri"
  >
    metadata uri
  </em>
  <br />
</span>
`;

exports[`EventOrGroupTitle renders with subtitle when \`type = error\` 1`] = `
<span>
  <GuideAnchor
    disabled={true}
    position="bottom"
    target="issue_title"
  >
    <span>
      metadata type
    </span>
  </GuideAnchor>
  <Spacer />
  <em
    title="culprit"
  >
    culprit
  </em>
  <br />
</span>
`;
